2012-01-12  Marek Polacek  <polacek@redhat.com>

	* libio/bits/stdio2.h: Do not define gets for ISO C11, ISO C++11,
	and _GNU_SOURCE.

2012-01-04  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* powerpc/powerpc32/sysdep.h: Add GLUE and GENERATE_GOT_LABEL macros.
	* unix/sysv/linux/powerpc/powerpc32/getcontext-common.S: Call
	macro to ensure uniqueness of label name.
	* unix/sysv/linux/powerpc/powerpc32/setcontext-common.S: Likewise.
	* unix/sysv/linux/powerpc/powerpc32/swapcontext-common.S: Likewise.

2012-01-11  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/e_acosh.c: New file.

	* sysdeps/ieee754/dbl-64/s_scalbln.c: Add branch prediction.
	* sysdeps/ieee754/flt-32/s_scalblnf.c: Likewise.
	* sysdeps/ieee754/ldbl-96/s_scalblnl.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_scalbln.c: New file.

2012-01-10  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_modf.c: New file.

	* sysdeps/ieee754/dbl-64/s_modf.c: Add branch prediction.
	* sysdeps/ieee754/flt-32/s_modff.c: Likewise.
	* sysdeps/ieee754/ldbl-96/s_modfl.c: Likewise.

	* math/bits/mathcalls.h: Add const attribute to fmin and fmax.

	* sysdeps/ieee754/dbl-64/s_scalbn.c: Add branch prediction.
	* sysdeps/ieee754/flt-32/s_scalbnf.c: Likewise.
	* sysdeps/ieee754/ldbl-96/s_scalbnl.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_scalbn.c: New file.

	* math/bits/math-finite.h: Add ldexp support.

2012-01-10  Marek Polacek  <polacek@redhat.com>

	* locale/programs/localedef.h (show_archive_content): Add noreturn
	attribute.

2012-01-09  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/s_log1p.c (__log1p): Add branch prediction.

2012-01-08  Ulrich Drepper  <drepper@gmail.com>

	* io/bits/poll2.h: Add __BEGIN/__END_DECLS.

	* io/Makefile (headers): Add bits/poll2.h.

2011-01-05  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/getcontext.S: Fix a
	typo #include statement.
